Bug 118976 - Area tab: Pattern preview is not shown
Summary: Area tab: Pattern preview is not shown
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
6.1.0.0.alpha1+
Hardware: All All
: medium normal
Assignee: Jim Raykowski
URL:
Whiteboard: target:6.2.0 target:6.1.1
Keywords: bibisected, bisected, regression
: 119466 (view as bug list)
Depends on:
Blocks: Regressions-imageHandling
  Show dependency treegraph
 
Reported: 2018-07-28 08:28 UTC by Jim Raykowski
Modified: 2018-08-28 10:53 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jim Raykowski 2018-07-28 08:28:42 UTC
Steps in Writer

1) Menu > Format > Paragraph
Paragraph dialog opens
2) select Area tab
3) select Pattern button
Preview is blue
4) Select patterns from list
Preview is still blue

Expected result:
Preview shows selected pattern
Comment 1 MM 2018-07-28 13:44:20 UTC
Unconfirmed on ubuntu 16.04 x64 with Version: 6.0.0.0.alpha1+
Build ID: 637d96a25926e299fff5b4cf5a0055b1d171b23b
CPU threads: 2; OS: Linux 4.4; UI render: default; VCL: gtk2; 
TinderBox: Linux-rpm_deb-x86_64@70-TDF, Branch:master, Time: 2017-11-17_23:45:59
Locale: en-US (en_US.UTF-8); Calc: single

Confirmed with Version: 6.1.0.0.alpha1+
Build ID: 47dc3115f12ff16dc326b6edd12c46e6a6ef1843
CPU threads: 2; OS: Linux 4.4; UI render: default; VCL: gtk2; 
TinderBox: Linux-rpm_deb-x86_64@70-TDF, Branch:master, Time: 2018-05-17_00:32:17
Locale: en-US (en_US.UTF-8); Calc: 

and

Version: 6.2.0.0.alpha0+
Build ID: 5a7d18e432571fb1e9b2cd54d6168353d25c6f19
CPU threads: 2; OS: Linux 4.4; UI render: default; VCL: gtk2; 
TinderBox: Linux-rpm_deb-x86_64@70-TDF, Branch:master, Time: 2018-07-26_22:07:10
Locale: en-US (en_US.UTF-8); Calc: threaded

Not only is the pattern preview blue, but also the bitmap preview.
Comment 2 Jim Raykowski 2018-07-28 22:28:32 UTC
Here is a proposed patch for this:
https://gerrit.libreoffice.org/#/c/58265/

The bitmap preview has been reported as bug 117892
Comment 3 Xisco Faulí 2018-07-30 09:02:21 UTC
Regression introduced by:

https://cgit.freedesktop.org/libreoffice/core/commit/?id=7b355669c6ddeab2e6cec692d6afdff41c61d0fb

author	Tomaž Vajngerl <tomaz.vajngerl@collabora.co.uk>	2018-04-14 15:13:05 +0900
committer	Tomaž Vajngerl <quikee@gmail.com>	2018-04-20 09:15:22 +0200
commit 7b355669c6ddeab2e6cec692d6afdff41c61d0fb (patch)
tree 46c55326bccfa68a2bb5fad6d637e0f4576c8d68
parent 663fd3d6e1f93ec989dc289e688d5dbfe434cbca (diff)
Function to load graphic swapped out (loaded on demand)

Bisected with: bibisect-linux64-6.1
Comment 4 Commit Notification 2018-07-31 11:37:21 UTC
Jim Raykowski committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=623cb7a1299386f8d8f7c53b0369a40cae51b752

tdf#118976 Make area pattern tab page display pattern preview

It will be available in 6.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2018-08-03 15:14:45 UTC
Jim Raykowski committed a patch related to this issue.
It has been pushed to "libreoffice-6-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=f207e283b756ea40721a46440d235836dcb79568&h=libreoffice-6-1

tdf#118976 Make area pattern tab page display pattern preview

It will be available in 6.1.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Xisco Faulí 2018-08-07 16:48:10 UTC
Verified in

Version: 6.2.0.0.alpha0+
Build ID: c86a47a9d3debbc7e8ee6247f573e7f98c611f19
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); Calc: group threaded

@Jim Raykowski, thanks for fixing this!!
Comment 7 Xisco Faulí 2018-08-28 10:53:29 UTC
*** Bug 119466 has been marked as a duplicate of this bug. ***