tdf#118976 Make area pattern tab page display pattern preview

Change-Id: If30b83ec93897b85784d66c699ece377f47f68d4
Reviewed-on: https://gerrit.libreoffice.org/58265
Tested-by: Jenkins
Tested-by: Xisco Faulí <xiscofauli@libreoffice.org>
Reviewed-by: Tomaž Vajngerl <quikee@gmail.com>
(cherry picked from commit 623cb7a1299386f8d8f7c53b0369a40cae51b752)
Reviewed-on: https://gerrit.libreoffice.org/58366
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>